Fri May 15 10:50:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.cpp:
          Only print debug messages when ORB debug is enabled

        * orbsvcs/tests/Bug_3673_Regression/Bug_3873_Regression.mpc:
          Remvoed

        * orbsvcs/tests/Bug_3673_Regression/Bug_3673_Regression.mpc:
          Added

        * orbsvcs/tests/Bug_3673_Regression/client.cpp:
          Make 10 iterations

Fri May 15 08:10:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3674_Regression/test.cpp:

          Fixed Fuzz error (MS_VER_ 1200)

Wed May 13 19:44:04 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/Strategies/DIOP_Acceptor.cpp:

          Fixed a crash that occurs with -ORBUseSharedProfile 1.

Wed May 13 16:33:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added 3673

Wed May 13 16:30:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_3673_Regression/*:
          Added new test for bug 3673

        * orbsvcs/tests/ior_corbaname/ior_corbaname_client_i.cpp:
          Const change

Wed May 13 13:35:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * bin/tao_orb_tests.lst:
        * tests/Bug_3674_Regression/test.idl:
        * tests/Bug_3674_Regression/run_test.pl:
        * tests/Bug_3674_Regression/Bug_3674_Regression.mpc:
        * tests/Bug_3674_Regression/test.cpp:

          Added regression test for PICurrent TSC client corruption.

Tue May 12 08:26:55 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:
        * tests/Bug_3171_Regression/server.cpp:
        * tests/DII_AMI_Forward/orb_initializer.h:

          TAO_Local_RefCounted_Object is deprecated. Changed
          it to CORBA::LocalObject.

Mon May 11 09:54:38 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/DII_AMI_Forward/server_interceptor.cpp:
          Fixed fuzz error.
